--- a/portfolio/resume/frontend/package.json
+++ b/portfolio/resume/frontend/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.5.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
